<resources>
    <string name="app_name">ShopMall</string>

    <string name="goods_name">请输入商品名称</string>
    <string name="news">消息</string>
    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="special_offer">特价</string>
    <string name="shopping_trolley">购物车</string>
    <string name="myself">我的</string>
    <string name="rank">排行榜</string>

    <!--商品详情-->
    <string name="image_text_details">图文详情</string>
    <string name="spot_goods">现货</string>
    <string name="all_comment">查看全部评价</string>
    <string name="no_comment">暂无评价...</string>
    <string name="someone_question">有疑问？问问买过的人吧！</string>
    <string name="goods">商品</string>
    <string name="serve">服务</string>
    <string name="logistics">物流</string>
    <string name="follow_num">关注人数</string>
    <string name="all_goods">全部商品</string>
    <string name="shop_status">店铺动态</string>
    <string name="contact_server">联系客服</string>
    <string name="into_shop">进入店铺</string>
    <string name="of_you_recommend">为你推荐</string>
    <string name="examine_more_recommend">查看更多为你推荐</string>
    <string name="examine_full_rank">查看完整排行榜</string>
    <string name="examine_image_text_details">上拉查看图文详情</string>
    <string name="goods_introduce">商品介绍</string>
    <string name="specification_parameter">规格参数</string>
    <string name="packaging_after_sale">包装售后</string>
    <string name="contact_the_seller">联系卖家</string>
    <string name="shop">店铺</string>
    <string name="follow">关注</string>
    <string name="into_shopping_trolley">加入购物车</string>

    <!--评价-->
    <string name="only_look_this_goods">只看当前商品</string>
    <string name="all_comments">全部评价</string>
    <string name="good_comment">好评</string>
    <string name="middle_comment">中评</string>
    <string name="low_comment">差评</string>
    <string name="image_comment">有图</string>

    <!--menu-->
    <string name="search">搜索</string>
    <string name="my_follow">我的关注</string>
    <string name="browsing_history">浏览记录</string>

    <string name="hot_search">热搜</string>
    <string name="subscription">订阅号</string>
    <string name="nologin">立即登录查看更多信息</string>
    <string name="findSimilar">找相似</string>


    <string name="login">登录</string>
    <string name="et_login">用户名/邮箱/手机号</string>
    <string name="password">密码</string>
    <string name="et_password">请输入密码</string>
    <string name="phone_register">手机快速注册</string>
    <string name="find_password">找回密码</string>
    <string name="login_and_register">登录/注册</string>

    <string name="login_synchronization">登录后同步电脑与手机购物车中的商品</string>
    <string name="shopping_trolley_isempty">购物车是空的</string>
    <string name="rush">抢618好货</string>
    <string name="look_follow">看看关注</string>

    <string name="obligation">待付款</string>
    <string name="wait_for_receiving">待收货</string>
    <string name="no_evaluated">待评价</string>
    <string name="after_sale">退换/售后</string>
    <string name="my_order">我的订单</string>

    <string name="buy">购买</string>
    <string name="count">数量</string>
    <string name="all_selected">全选</string>
    <string name="goto_account">去结算</string>

    <string name="vip_clup">会员俱乐部</string>
    <string name="plus_vip">PLUS会员</string>
    <string name="address_administration">地址管理</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="account_security">账户安全</string>
    <string name="connected_account">关联账号</string>

    <string name="synthesize">综合</string>
    <string name="sales_volume">销量</string>
    <string name="price">价格</string>
    <string name="filtrate">筛选</string>

    <string name="delivery">快递配送</string>
    <string name="brand">品牌</string>

    <string name="synthesize_sort">综合排序</string>
    <string name="new_goods">新品优先</string>
    <string name="recommend_from_hight_to_low">评价数从高到低</string>

    <string name="price_section">价格区间</string>
    <string name="all">全部</string>
    <string name="all_classify">全部分类</string>

    <!--我的日历-->
    <string name="today_activity">当日活动</string>
    <string name="activity">活动</string>
    <string name="remind_list">提醒列表</string>
    <string name="home_furnishing">家居家装</string>
    <string name="household_appliances">家用电器</string>
    <string name="food_fresh">食品生鲜</string>
    <string name="general_merchandise">日用百货</string>
    <string name="shoe_and_bag">鞋靴箱包</string>
    <string name="mobile_digital">手机数码</string>
    <string name="horologe_jewelry">钟表珠宝</string>
</resources>
