<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_goods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_goods_introduce"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/goods_introduce"
            android:textColor="@color/red"
            android:textSize="13sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/line_color" />

        <RadioButton
            android:id="@+id/rb_specification_parameter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:button="@null"
            android:text="@string/specification_parameter"
            android:textColor="@color/t313131"
            android:textSize="13sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/line_color" />

        <RadioButton
            android:id="@+id/rb_packaging_after_sale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/packaging_after_sale"
            android:textColor="@color/t313131"
            android:textSize="13sp" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>