<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.nuptboyzhb.lib.SuperSwipeRefreshLayout
            android:id="@+id/srl_shop_trolley"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nsv_shop_trolley"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/shape_login_white_library"
                            android:paddingBottom="3dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="3dp"
                            android:text="@string/login"
                            android:textColor="@color/t313131"
                            android:textSize="13sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:text="@string/login_synchronization"
                            android:textColor="@color/t313131"
                            android:textSize="13sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_shop_isempty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp"
                            android:drawableLeft="@mipmap/ic_shopping_trolley_library"
                            android:drawablePadding="10dp"
                            android:gravity="center"
                            android:text="@string/shopping_trolley_isempty"
                            android:textColor="@color/gary"
                            android:textSize="13sp"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_shop_trolley"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nestedScrollingEnabled="false"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/tv_good_goods"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_login_white_library"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/rush"
                            android:textColor="@color/black"
                            android:textSize="15sp"/>

                        <TextView
                            android:id="@+id/tv_look_follow"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_follow_red_library"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="5dp"
                            android:text="@string/look_follow"
                            android:textColor="@color/white"
                            android:textSize="15sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/grey"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/of_you_recommend"
                            android:textColor="@color/colorAccent"
                            android:textSize="15sp"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_shop_of_you"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:nestedScrollingEnabled="false"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </com.github.nuptboyzhb.lib.SuperSwipeRefreshLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="50dp"
            android:layout_marginRight="30dp"
            android:src="@mipmap/ic_go_top_library"
            app:backgroundTint="@color/white"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:rippleColor="@color/white"/>

        <LinearLayout
            android:id="@+id/ll_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="bottom"
            android:background="@drawable/shape_login_white_library"
            android:gravity="center">

            <CheckBox
                android:id="@+id/cb_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_selected"
                android:textColor="@color/t313131"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/tv_all_goods_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="合计:198.00"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <LinearLayout
                android:id="@+id/ll_goto_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goto_account"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_account_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(1)"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>